AC_PREREQ([2.69])
AC_INIT([TUI], [0.9.0], [erat.simon@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror gnu])
AM_GNU_GETTEXT([external])
AC_CONFIG_FILES([ po/Makefile.in
 Makefile
 tuirc
 bin/Makefile
 docs/Makefile
 docs/samples/Makefile
 docs/tex/Makefile
 conf.etc/Makefile
 conf.home/Makefile
 lists/Makefile
 man/Makefile
 templates/Makefile
 templates/manpage/Makefile
 templates/scripts/Makefile
 themes/Makefile
 locale/Makefile
 po/Makefile
])
AC_OUTPUT
